--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,58 @@
-.App {
-  text-align: center;
+:root {
+  /*Colors for layout*/
+  --blue-header: #59B3DC;
+  --blue-nav: #03A8D0;
+  --gray-dash: #F1F4F8;
+  --black-text: #FFFFFF;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.blue-header {
+  color: var(--blue-header);
 }
+
+.blue-nav {
+  color: var(--blue-nav);
+}
+
+.gray-dash {
+  color: var(--gray-dash);
+}
+
+.black {
+  color: var(--black-text);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  /**font-size: 62.5%;**/
+ 
+  height: 100%;
+  scroll-behavior: smooth;
+  overflow: hidden;
+}
+
+.App {
+  display: flex;
+  text-align: center;
+  background-color: #F1F4F8;
+}
+
+.btn-fab {
+  position: fixed;
+  top: 65px;
+  background-color: white;
+  color: var(--blue-header);
+  right: 0;
+  padding-right: 10px;
+
+}
+
 
 .App-header {
   background-color: #282c34;
@@ -19,15 +65,17 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+a:visited { text-decoration: none; color: none; }
+a:hover { text-decoration: none; color: none; }
+a:focus { text-decoration: none; color: none; }
+a:active { text-decoration: none; color: none }
+a:link { text-decoration: none; color: none}
+
+
+a {
+   text-decoration:none;
+   color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
