--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -29,8 +29,8 @@
 
 
 @media screen and (max-width: 1200px) {
-	.footer {
-		visibility: hidden;
+	.footer-text {
+		visibility: hidden !important;
 	}
 }
 
